<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bag_save_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="furkansariyildiz@windowslive.com">furkan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rosbag2_cpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosbag2_cpp</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rosidl_default_generators</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
